2006-01-26  Derek Atkins  <derek@ihtfp.com>

	* configure.in: fail if we find libgsf >= 1.12.2 but not libgsf-gnome.
	  This is instead of configure succeeding and then failing the
	  build later.

2006-01-24  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-gettrans.h: Factor out importing
	functions that might be useful for mt940 importer.

	* src/import-export/hbci/gnc-hbci-transfer.c: Fix wrong amount
	sign.

2006-01-23  Derek Atkins  <derek@ihtfp.com>

	* src/engine/test/Makefile.am: add explicit libdep on libcore-utils.la

2006-01-23  Neil Williams <linux@codehelp.co.uk>

	* src/engine/Transaction.c : Let the backend
	work with splits without checking for the parent Trans
	* src/gnome/glade/chart-export.glade : glade-fixup change.
	* src/gnome/glade/merge.glade : Reviewed for QSF Import usage
	* src/gnome/druid-merge.c : Fix QSF import and merge, closes
	[Bug 327640]. r12961. 
	* src/gnome/druid-merge.h : Remove unneeded function.
	* src/gnome/druid-hierarchy.c : Expand on the error message,
	should it still be required.
	* configure.in : Increase QOF dependency to the next release
	to ensure compatibility.

2006-01-23  Neil Williams <linux@codehelp.co.uk>

	* lib/libqof/backend/file/qsf-backend.c : Prevent 
	bad time values from being passed to entity.
	* lib/libqof/qof/qof_book_merge.c : Fix merge 
	handling of QOF_TYPE_CHAR to use gchar instead of 
	casting	from a gchar*
	* lib/libqof/qof/qof_book_merge.h : Use gchar 
	consistently instead of mixing with char.

r12964 | chris | 2006-01-23 14:29:57 -0500 (Mon, 23 Jan 2006) | 5 lines

   M /gnucash/trunk/src/bin/Makefile.am
   M /gnucash/trunk/src/bin/gnucash-bin.c

  Avoid GUI initialization durring --add-price-quotes, fixes #327670

  BTW, it turns out that we don't need to call gtk_init().  It's called 
  during the LIBGNOMEUI_MODULE initializtion from gnome_program_init().

r12956 | chris | 2006-01-23 12:38:13 -0500 (Mon, 23 Jan 2006) | 28 lines
