@@ -42,7 +42,7 @@ SCM gnc_report_find(gint id);
 void gnc_report_remove_by_id(gint id);
 void gnc_report_add(gint id, SCM report);
 
-void gnc_reports_flush_global();
-GHashTable *gnc_reports_get_global();
+void gnc_reports_flush_global(void);
+GHashTable *gnc_reports_get_global(void);
 
 #endif
